# ai-agent-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: evaluation_cases.jsonl
docs/: architecture.md  deployment.md  evaluation.md  interview-prep.md  walkthrough.md
reports/: evaluation-report.json  evaluation-report.md
src/ai_agent_assistant/: __init__.py  app.py  config.py  evaluate.py  evaluation.py  execution_log.py  graph.py  memory.py  planner.py  tools.py
tests/: test_evaluation.py  test_graph.py  test_planner.py  test_tools.py
