[project]
name = "ai-agent-assistant"
version = "0.3.0"
description = "A LangGraph-based AI agent assistant with tool calling, Streamlit UI, and optional OpenAI planning."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Qianxi Lu" },
]
dependencies = [
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "streamlit>=1.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent_assistant"]

[project.scripts]
agent-evaluate = "ai_agent_assistant.evaluate:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
